[project]
name = "podcastindex33"
version = "0.2.0"
description = "Wrapper around the Podcast Index 2.0 API"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "httpx~=0.18",
]
requires-python = ">=3.7"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/pizzapanther/podcastindex33"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
_.env_file = ".env"

